# DCA-on-Anti-DCA-DFA-Layers

./: CMakeLists.txt  README.md
include/: ENCA.h
include/WBMatrix/: WBMatrix.h
src/WBMatrix/: WBMatrix.c
test/: main.c
